# CAD

./: CITATION.cff  CONTRIBUTING.md  Makefile  PUSH_TO_GITHUB.md  README.md  SMOKE_TEST.md  pyproject.toml  requirements.txt
config/: synthetic_experiment.json
diagrams/: fig01_bioarc_overview.mmd  fig02_cad_pipeline.mmd  figA1_bioarc_external_integrations.mmd  figA2_observability_sync.mmd
manuscript/: README.md  V1_simulated.tex  V1_source_with_author_inputs.tex  references.bib
results/: ablation_summary.csv  component_ground_truth.csv  defect_ground_truth.csv  manuscript_values.json  metadata.json  method_summary.csv  pathway_summary.csv  run_metrics.csv  run_pathway_summary.csv  run_trace_coverage.csv  runtime_summary.csv  sensitivity_summary.csv
scripts/: render_mermaid.sh  run_experiment.py  update_manuscript.py
src/cad_sim/: __init__.py  cli.py  config.py  experiment.py  metrics.py  reporting.py  scoring.py  synthetic.py
tests/: test_article_alignment.py  test_committed_results.py  test_manuscript.py  test_metrics.py  test_scoring.py  test_smoke.py  test_synthetic.py
