[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-synthetic-replication"
version = "0.2.0"
description = "Reproducible synthetic evaluation of Clinical-Architectural Debt"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Mohammad Tanhaei", email = "m.tanhaei@ilam.ac.ir"}
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cad-sim = "cad_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
